--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container pt-5">
+    <div class="container pt-5" id="app">
         <div class="row mb-3">
             <div class="col">
                 <h1>Cars Application</h1>
@@ -30,6 +30,9 @@
                     <li class="list-group-item list-group-item-action">lorem</li>
                     <li class="list-group-item list-group-item-action">lorem</li>
                     <li class="list-group-item list-group-item-action">lorem</li>
+                    <div id="vueapp">
+                        {{ message }}
+                    </div>
                 </ul>
             </div>
             <div class="col-md-8 pt-3">
@@ -46,7 +49,7 @@
                             <li>Owner- <strong>Sashko</strong></li>
                         </ul>
                         <p>+38 (068) 316 - 27 - 26</p>
-                        <button class="btn btn-outline-success">1234</button>
+                        <button class="btn btn-outline-success">Show phone</button>
                         <button class=" btn btn-primary">Buy</button>
                     </div>
                 </div>
@@ -54,6 +57,8 @@
         </div>
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
